Fixing contact page styling

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1111,6 +1111,14 @@ main#content .container {
   display: none;
 }
 /* line 667, sass/main.sass */
+#contact .success p {
+  margin-top: 20px;
+}
+/* line 669, sass/main.sass */
+#contact .success strong {
+  font-weight: bold;
+}
+/* line 671, sass/main.sass */
 #contact .errors {
   display: none;
   font-style: italic;
@@ -1119,44 +1127,44 @@ main#content .container {
   border-bottom: 1px solid #B24629;
   margin: 20px 0;
 }
-/* line 674, sass/main.sass */
+/* line 678, sass/main.sass */
 #contact .errors ul li {
   font-size: 14px;
   margin-bottom: 5px;
 }
-/* line 677, sass/main.sass */
+/* line 681, sass/main.sass */
 #contact .errors ul li:last-child {
   margin-bottom: 0;
 }
-/* line 679, sass/main.sass */
+/* line 683, sass/main.sass */
 #contact form {
   margin-top: 20px;
 }
-/* line 681, sass/main.sass */
+/* line 685, sass/main.sass */
 #contact form .form-left {
   float: left;
   width: 240px;
 }
-/* line 684, sass/main.sass */
+/* line 688, sass/main.sass */
 #contact form .form-right {
   float: left;
 }
-/* line 686, sass/main.sass */
+/* line 690, sass/main.sass */
 #contact form #location {
   display: none;
 }
-/* line 688, sass/main.sass */
+/* line 692, sass/main.sass */
 #contact label, #contact input, #contact button, #contact select, #contact textarea {
   font-size: 14px;
   font-weight: normal;
   line-height: 20px;
 }
-/* line 692, sass/main.sass */
+/* line 696, sass/main.sass */
 #contact .required {
   color: red;
   padding-left: 5px;
 }
-/* line 696, sass/main.sass */
+/* line 700, sass/main.sass */
 #contact input[type="submit"] {
   -webkit-appearance: button;
   display: block;
@@ -1174,12 +1182,12 @@ main#content .container {
   margin-top: 10px;
   width: 220px;
 }
-/* line 713, sass/main.sass */
+/* line 717, sass/main.sass */
 #contact label {
   display: block;
   margin-bottom: 5px;
 }
-/* line 717, sass/main.sass */
+/* line 721, sass/main.sass */
 #contact select, #contact textarea {
   display: inline-block;
   height: 20px;
@@ -1190,7 +1198,7 @@ main#content .container {
   color: #555555;
   vertical-align: middle;
 }
-/* line 729, sass/main.sass */
+/* line 733, sass/main.sass */
 #contact input[type="text"], #contact input[type="password"], #contact input[type="datetime"], #contact input[type="datetime-local"], #contact input[type="date"], #contact input[type="month"], #contact input[type="time"], #contact input[type="week"], #contact input[type="number"], #contact input[type="email"], #contact input[type="url"], #contact input[type="search"], #contact input[type="tel"], #contact input[type="color"] {
   display: inline-block;
   height: 20px;
@@ -1201,11 +1209,11 @@ main#content .container {
   color: #555555;
   vertical-align: middle;
 }
-/* line 739, sass/main.sass */
+/* line 743, sass/main.sass */
 #contact input {
   width: 206px;
 }
-/* line 742, sass/main.sass */
+/* line 746, sass/main.sass */
 #contact textarea {
   width: 340px;
   height: 140px;
@@ -1219,7 +1227,7 @@ main#content .container {
   -o-transition: border linear 0.2s, box-shadow linear 0.2s;
   transition: border linear 0.2s, box-shadow linear 0.2s;
 }
-/* line 756, sass/main.sass */
+/* line 760, sass/main.sass */
 #contact input[type="text"], #contact input[type="password"], #contact input[type="datetime"], #contact input[type="datetime-local"], #contact input[type="date"], #contact input[type="month"], #contact input[type="time"], #contact input[type="week"], #contact input[type="number"], #contact input[type="email"], #contact input[type="url"], #contact input[type="search"], #contact input[type="tel"], #contact input[type="color"] {
   background-color: #ffffff;
   border: 1px solid #cccccc;
@@ -1231,7 +1239,7 @@ main#content .container {
   -o-transition: border linear 0.2s, box-shadow linear 0.2s;
   transition: border linear 0.2s, box-shadow linear 0.2s;
 }
-/* line 767, sass/main.sass */
+/* line 771, sass/main.sass */
 #contact textarea:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -1239,7 +1247,7 @@ main#content .container {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-/* line 775, sass/main.sass */
+/* line 779, sass/main.sass */
 #contact input[type="text"]:focus, #contact input[type="password"]:focus, #contact input[type="datetime"]:focus, #contact input[type="datetime-local"]:focus, #contact input[type="date"]:focus, #contact input[type="month"]:focus, #contact input[type="time"]:focus, #contact input[type="week"]:focus, #contact input[type="number"]:focus, #contact input[type="email"]:focus, #contact input[type="url"]:focus, #contact input[type="search"]:focus, #contact input[type="tel"]:focus, #contact input[type="color"]:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -1247,7 +1255,7 @@ main#content .container {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-/* line 782, sass/main.sass */
+/* line 786, sass/main.sass */
 #contact .uneditable-input:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -1255,7 +1263,7 @@ main#content .container {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-/* line 790, sass/main.sass */
+/* line 794, sass/main.sass */
 #contact input[type="radio"], #contact input[type="checkbox"] {
   margin: 4px 0 0;
   margin-top: 1px \9;
