--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -664,6 +664,10 @@ footer
         text-decoration: underline
   .success
     display: none
+    p
+      margin-top: 20px
+    strong
+      font-weight: bold
   .errors
     display: none
     font-style: italic
