more and more translations!

--- a/craft/templates/news/archive.html
+++ b/craft/templates/news/archive.html
@@ -6,9 +6,9 @@
   <div id="news-sidebar">
 
     <div class="news-sidebar-section news-search-form">
-      <h1>Search Archives</h1>
+      <h1>{{ "Search Archives" | translate }}</h1>
       <form action="{{ url('news/archive') }}">
-        <input type="search" name="q" placeholder="SEARCH">
+        <input type="search" name="q" placeholder="{{ 'Search' | translate }}">
         <input type="submit" value="Go">
       </form>
     </div>
