--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -82,11 +82,11 @@ header
           margin-left: 0
     &.right-navigation
       li
-        margin-right: 8px
+        margin-right: 10px
       li:last-child
         margin-right: 0
     a
-      font-size: 18px
+      font-size: 17px
       color: #fff
       text-decoration: none
       padding-bottom: 10px
@@ -133,6 +133,8 @@ header
         li, li:first-child
           margin-left: 68px
       &.right-navigation
+        li
+          margin-right: 45px
         li:last-child
           margin-right: 45px
 footer
@@ -650,7 +652,46 @@ footer
           img
             float: left
             margin-right: 10px
-
+      #mc_embed_signup
+        padding: 25px 30px
+        background-color: #F3F3F3
+        h2
+          text-align: center
+          font-size: 20px
+          margin: 0
+          padding: 0
+          margin-bottom: 25px
+        .mc-field-group 
+          margin-bottom: 15px
+          label
+            display: block
+            margin-bottom: 5px
+          input
+            width: 100%
+            padding: 5px
+            font-size: 14px
+            @include box-sizing('border-box')
+          .mce_inline_error
+            width: 100%
+            @include box-sizing('border-box')
+        input[type="submit"]
+          -webkit-appearance: button
+          display: block
+          padding: 6px 12px
+          margin-bottom: 0
+          text-align: center
+          cursor: pointer
+          background-image: none
+          border: 1px solid transparent
+          color: #fff
+          background: $orange
+          font-size: 16px
+          line-height: 20px
+          font-family: $serif
+          width: 100%
+          margin-top: 25px
+          text-align: center
+          
 // Contact Page
   
 #contact
