--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -89,7 +89,7 @@ header
   .localization
     position: absolute
     top: 0
-    right: 45px
+    right: 0
     font-family: $sans
     li
       padding: 9px 12px
