--- a/craft/templates/contact.html
+++ b/craft/templates/contact.html
@@ -1,6 +1,7 @@
 {% extends "_layout" %}
 
 {% block content %}
+{% cache globally using key craft.request.path %}
 
   {% for entry in craft.entries.section('pages').slug(craft.request.getSegment(1)) %}
   <article class="page-content">
@@ -58,4 +59,5 @@
   </article>
   {% endfor %}
 
+{% endcache %}
 {% endblock %}
