--- a/craft/templates/standard_page.html
+++ b/craft/templates/standard_page.html
@@ -1,7 +1,8 @@
 {% extends "_layout" %}
 
 {% block content %}
-  
+{% cache globally using key craft.request.path %}
+
   {% for entry in craft.entries.section('pages').slug(craft.request.getSegment(1)) %}
   <article class="page-content">
     <div class="page-image">
@@ -15,5 +16,6 @@
     </div>
   </article>
   {% endfor %}
-	
+
+{% endcache %}
 {% endblock %}
