--- a/craft/templates/wines.html
+++ b/craft/templates/wines.html
@@ -1,6 +1,7 @@
 {% extends "_layout" %}
 
 {% block content %}
+{% cache globally using key craft.request.path %}
   
   {% for entry in craft.entries.section('wine') %}
   <article class="page-content wine-page-content {% if loop.index == 1 %}active{% endif %}" id="wine-{{ entry.slug }}">
@@ -51,5 +52,6 @@
     </div>
   </article>
   {% endfor %}
-	
+
+{% endcache %}
 {% endblock %}
