--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -1,3 +1,10 @@
+{# Tell the browser to cache this page for 30 days #}
+{% set expiry = now|date_modify('+4 days') %}
+
+{% header "Cache-Control: max-age=" ~ expiry.timestamp %}
+{% header "Pragma: cache" %}
+{% header "Expires: " ~ expiry|date('D, d M Y H:i:s', 'GMT') ~ " GMT" %}
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
 <head>
