--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -492,6 +492,10 @@ footer
   .container
     h1
       font-size: 45px
+    .page-detail
+      .news-image
+        float: right
+        margin-left: 20px
     .page-content
       .news-image
         margin-bottom: 20px
